[gd_scene load_steps=2 format=3 uid="uid://dfk3iirt1ep8m"]

[ext_resource type="Script" path="res://Scripts/Subwindows/Settings.gd" id="1_xvsog"]

[node name="Settings" type="Window"]
title = "Settings"
initial_position = 2
size = Vector2i(700, 350)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_xvsog")

[node name="OkButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -41.0
offset_right = -79.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "OK"

[node name="CancelButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -41.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Cancel"

[node name="EnableGit" type="CheckBox" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 124.0
offset_bottom = 51.0
text = "Enable git"

[node name="RepoLabel" type="Label" parent="EnableGit"]
layout_mode = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 98.0
offset_bottom = 58.0
text = "Git repo url:"

[node name="BranchLabel" type="Label" parent="EnableGit/RepoLabel"]
layout_mode = 0
offset_left = -5.0
offset_top = 65.0
offset_right = 103.0
offset_bottom = 88.0
text = "Branch name:

P.D:   You need to have already installed git and have it
          on the environment variables to be able to use it."

[node name="LineEdit" type="LineEdit" parent="EnableGit/RepoLabel/BranchLabel"]
layout_mode = 0
offset_left = 115.0
offset_top = -3.0
offset_right = 415.0
offset_bottom = 28.0

[node name="ValidLabel" type="Label" parent="EnableGit/RepoLabel"]
layout_mode = 0
offset_left = 100.0
offset_top = 30.0
offset_right = 185.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Url is valid."

[node name="LineEdit" type="LineEdit" parent="EnableGit/RepoLabel"]
layout_mode = 0
offset_left = 100.0
offset_top = -3.0
offset_right = 600.0
offset_bottom = 28.0

[node name="FontStyle" type="Label" parent="."]
offset_left = 20.0
offset_top = 250.0
offset_right = 101.0
offset_bottom = 273.0
text = "Font Style:"

[node name="OptionButton" type="OptionButton" parent="FontStyle"]
layout_mode = 0
offset_left = 100.0
offset_top = -3.0
offset_right = 400.0
offset_bottom = 28.0
selected = 0
item_count = 2
popup/item_0/text = "Template"
popup/item_0/id = 1
popup/item_1/text = "Undertale Yellow"
popup/item_1/id = 1

[node name="Author" type="Label" parent="FontStyle"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 94.0
offset_bottom = 63.0
text = "Author:"

[node name="LineEdit" type="LineEdit" parent="FontStyle/Author"]
layout_mode = 0
offset_left = 90.0
offset_top = -3.0
offset_right = 390.0
offset_bottom = 28.0
text = "AuthorName"
placeholder_text = "No name."
editable = false

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="item_selected" from="FontStyle/OptionButton" to="." method="_on_option_button_item_selected"]
